--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "^3.7.4"
   },
   "dependencies": {
+    "@vee-validate/nuxt": "^4.11.7",
     "pocketbase": "^0.18.0",
     "zod": "^3.22.2"
   },
