--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "devDependencies": {
     "@bootstrap-vue-next/nuxt": "^0.14.5",
+    "@iconify/json": "^2.2.121",
     "@nuxt/devtools": "latest",
     "bootstrap": "^5.3.2",
     "bootstrap-vue-next": "^0.14.5",
     "cz-conventional-changelog": "^3.3.0",
-    "nuxt": "^3.7.4"
+    "nuxt": "^3.7.4",
+    "unplugin-icons": "^0.17.0"
   },
   "dependencies": {
     "@vee-validate/nuxt": "^4.11.7",
